Use ImmutableSet.of instead of Set.of
Use `println(Set.of("A", "B"))` and see that `Set.of()` doesn't even *try* to preserve ordering.
This was troublesome, since saving a JSON file in the script editor would default to .geojson.